# pycg

./: .gitignore  .readthedocs.yml  DEV.md  LICENSE  MANIFEST.in  NOTE_O3D.md  README.md  dev_link.sh  mkdocs.yml  pyproject.toml  setup.py  stub_link.sh
.github/workflows/: publish.yml
assets/: chair.ply  room.ply
docs/: exp.md  image.md  index.md  isometry.md  pdf.md  render.md  video.md  vis.md
examples/: animate_cam_light.py  animate_rotating.py  anime.py  closure.py  cocurrent_run.py  concurrent_run.py  export_import_usd.py  scene_show.py  scene_themes.py  splines.py  test_render_blender.py
pycg/: __init__.py  animation.py  blender_client.py  camera.py  color.py  exp.py  html.py  image.py  interfaces.py  isometry.py  nas.py  o3d.py  pdf.py  render.py  render.yaml  video.py  vis.py  wdb.py
pycg/assets/: blender_general.py  render.blend
pycg/assets/envmaps/: pycg-gtc_ibl.ktx  pycg-gtc_skybox.ktx  pycg-rainforest_ibl.ktx  pycg-rainforest_skybox.ktx
pycg/blender_server/: assets.py  main.py  point_cloud_visualizer.py  style.py
pycg/blender_server/shaders/: pc_normal.frag  pc_normal.vert
